<resources>
    <string name="app_name">TAMUAS</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_beranda">Beranda</string>
    <string name="menu_rekomendasi">Rekomendasi</string>
    <string name="menu_trending">Trending</string>
    <string name="menu_kategori">Kategori</string>
    <string name="menu_2jutaan">Hp 2 jutaan Terbaik</string>
    <string name="menu_3jutaan">Hp 3 jutaan Terbaik</string>
    <string name="menu_4jutaan">Hp 4 jutaan Terbaik</string>
    <string name="menu_gaming">Gaming Terbaik</string>
    <string name="menu_kamera">Kamera Terbaik</string>
    <string name="menu_tentang">Tentang</string>
    <string name="menu_detail">Detail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>